--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -16,18 +16,20 @@
       <div class="leftSection">
         <div class="signBlk py-4">
           <h1 class="mx-4">Sign Up</h1>
-          <form class="mx-4" action="/signup" method="POST">
+          <form class="mx-4" action="/rest/register" method="POST">
             <label for="name">Name of Restaurant</label>
-            <input type="text" name="name" />
+            <input required type="text" name="name" />
             <label for="address">Address</label>
-            <input type="text" name="address" />
+            <input required type="text" name="address" />
             <label for="phone">Phone</label>
-            <input type="number" name="phone" />
+            <input required type="number" name="phone" />
             <label for="email">Email Address</label>
-            <input type="email" name="email" />
+            <input required type="email" name="email" />
 
             <label for="password">Password</label>
-            <input type="password" style="display: block;" />
+            <input required type="password" name="password" />
+            <label for="confirmPassword">Re-enter Password</label>
+            <input required type="password" name="confirmPassword" />
             <button type="submit" class="mt-2 subBtn">Submit</button>
           </form>
         </div>
@@ -35,12 +37,12 @@
       <div class="rightSection">
         <div class="loginBlk py-4 ">
           <h1 class="mx-4">Login</h1>
-          <form class="mx-4" action="/login" method="POST">
-            <label for="email">Email Address</label>
+          <form class="mx-4" action="/rest/signin" method="POST">
+            <label for="username">Email Address</label>
             <input type="email" name="email" />
 
             <label for="password">Password</label>
-            <input type="password" style="display: block;" />
+            <input type="password" name="password" style="display: block;" />
             <button type="submit" class="mt-2 subBtn">Submit</button>
           </form>
         </div>
