--- a/css/style.css
+++ b/css/style.css
@@ -712,7 +712,10 @@ body.mobile-nav-active #mobile-nav-toggle {
 #about .about-col:hover i {
   color: #18d26e;
 }
-
+#about .about-col:hover {
+  transform: scale(1.1) ;
+  transition: 0.5s;
+}
 #about .about-col h2 {
   color: #000;
   text-align: center;
