--- a/public/css/signup.css
+++ b/public/css/signup.css
@@ -1,7 +1,7 @@
 body {
-  background: linear-gradient(-45deg, #00ff6a, #ffc628, #00ff40);
-  background-size: 400% 400%;
-  animation: gradient 15s ease infinite;
+  /* background: linear-gradient(-45deg, #00ff6a, #ffffff, #00ff40) !important; */
+  /* background-size: 400% 400% !important; */
+  /* animation: gradient 15s ease infinite !important; */
 }
 
 @keyframes gradient {
@@ -17,39 +17,40 @@ body {
 }
 
 .mainSection {
-  display: flex;
+  display: flex !important;
 }
 .leftSection {
-  flex: 1;
+  flex: 1 !important;
 }
 .rightSection {
-  flex: 1;
+  flex: 1 !important;
 }
 input {
-  display: block;
-  width: 99%;
-  border: none;
-  background: rgba(233, 232, 232, 0.7);
-  height: 40px;
-  box-shadow: 1px 1px 1px rgba(233, 233, 232, 0.5);
+  display: block !important;
+  width: 99% !important;
+  border: none !important;
+  background: rgba(233, 232, 232, 0.7) !important;
+  height: 40px !important;
+  box-shadow: 1px 1px 1px rgba(233, 233, 232, 0.5) !important;
 }
 .signBlk {
-  width: 75%;
-  margin: auto;
-  background: white;
-  box-shadow: 2px 2px 2px rgba(194, 194, 194, 0.8);
+  width: 75% !important;
+  margin: 80px auto !important;
+  background: white !important;
+  box-shadow: 0px 1px 5px rgba(134, 134, 134, 0.8) !important;
 }
 
 .loginBlk {
-  background: white;
-  width: 75%;
-  margin: 50px auto;
+  background: white !important;
+  width: 75% !important;
+  margin: 80px auto !important;
+  box-shadow: 0px 1px 5px rgba(134, 134, 134, 0.8) !important;
 }
 .subBtn {
-  width: 99%;
-  height: 40px;
-  background: rgb(3, 221, 3);
-  border: none;
-  border-radius: 0px;
-  color: white;
+  width: 99% !important;
+  height: 40px !important;
+  background: rgb(3, 221, 3) !important;
+  border: none !important;
+  border-radius: 0px !important;
+  color: white !important;
 }
