--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -1,13 +1,23 @@
-.previous-pickups-container {
-  max-height: 300px;
-  overflow-y: scroll;
-  margin-bottom: 40px;
+.previous-pickups-container{
+    max-height: 300px;
+    overflow-y: scroll;
+    margin-bottom: 40px;
 }
-.subBtn {
-  width: 99%;
-  height: 40px;
-  background: rgb(3, 221, 3);
-  border: none;
-  border-radius: 0px;
-  color: white;
+.card-redeem-container{
+    display:flex;
+    max-width:100%;
+    padding:20px;
+    align-items: center;
+    vertical-align: middle;
+}
+.credits-each-product{
+    flex:50%;
+    max-width:50%;
+    border-right: 2px solid #8888;
+    padding-bottom: 10%;
+}
+.redeem-now-option{
+    padding:10px;
+    flex:50%;
+    max-width:50%;
 }
