--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,6 +19,11 @@
     <link href="/lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
     <link href="/lib/lightbox/css/lightbox.min.css" rel="stylesheet">
     <link href="/css/style.css" rel="stylesheet">
+    <style>
+        .nav-menu li a:hover{
+            color:white;
+        }
+    </style>
 </head>
 
 <body>
@@ -26,9 +31,23 @@
         <div class="container-fluid">
 
             <div id="logo" class="pull-left">
-                <!-- <h1><a href="#intro" class="scrollto">BizPage</a></h1> -->
-                <!-- Uncomment below if you prefer to use an image logo -->
-                <a href="#intro"><img height="50px;" src="/img/logo.png" alt="Hackathon" title="Hackathon" /></a>
+                 <h1 style=" display: inline;">
+                    <a style="color:white;" href="#intro" class="scrollto"
+                      >F<span
+                        ><img
+                          height="35px;"
+                          src="/img/logo.png"
+                          alt="Hackathon"
+                          title="Hackathon"/></span
+                      ><span
+                        ><img
+                          height="35px;"
+                          src="/img/logo.png"
+                          alt="Hackathon"
+                          title="Hackathon"/></span
+                      >d2Fuel</a
+                    >
+                  </h1>
             </div>
 
             <nav id="nav-menu-container">
@@ -40,11 +59,8 @@
                 </ul>
             </nav>
         </div>
-    </header><!-- #header -->
+    </header>
 
-    <!--==========================
-    Intro Section
-  ============================-->
     <section id="intro">
         <div class="intro-container">
             <div id="introCarousel" class="carousel  slide carousel-fade" data-ride="carousel">
@@ -59,11 +75,9 @@
                         </div>
                         <div class="carousel-container">
                             <div class="carousel-content">
-                                <h2>We are professional</h2>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                                    exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                                <a href="#featured-services" class="btn-get-started scrollto">Get Started</a>
+                                <h2>Food <i class="fa fa-recycle" ></i> Fuel</h2>
+                                <p>There is no such thing as "Away"<br> When we throw anything away it must go somewhere</p>
+                                <a href="/rest/register" class="btn-get-started scrollto">Get Started</a>
                             </div>
                         </div>
                     </div>
@@ -72,11 +86,9 @@
                         <div class="carousel-background"><img src="/img/greener-future.png" alt=""></div>
                         <div class="carousel-container">
                             <div class="carousel-content">
-                                <h2>At vero eos et accusamus</h2>
-                                <p>Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo
-                                    minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis
-                                    dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut.</p>
-                                <a href="#featured-services" class="btn-get-started scrollto">Get Started</a>
+                                <h2>Waste isn't waste until we waste it!!</h2>
+                                <p>When you put the whole Picture together, Recycling is the best thing to do...</p>
+                                <a href="/rest/register" class="btn-get-started scrollto">Get Started</a>
                             </div>
                         </div>
                     </div>
@@ -96,36 +108,33 @@
 
             </div>
         </div>
-    </section><!-- #intro -->
+    </section>
 
     <main id="main">
 
-        <!--==========================
-      About Us Section
-    ============================-->
         <section id="about">
             <div class="container">
 
                 <header class="section-header">
                     <h3>About Us</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                        laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    <p>We offer used cooking oil and grease pickup, recycling and reusing services and we cater to restaurants, cafes and hotels.</p>
                 </header>
 
                 <div class="row about-cols">
 
-                    <div class="col-md-4 wow fadeInUp">
+                    <div class="col-md-4 wow fadeInUp text-center">
                         <div class="about-col">
                             <div class="img">
                                 <img src="/img/about-mission.jpg" alt="" class="img-fluid">
                                 <div class="icon"><i class="ion-ios-speedometer-outline"></i></div>
                             </div>
-                            <h2 class="title"><a href="#">Our Mission</a></h2>
+                            <h2 class="title"><a >Problems caused by UCO</a></h2>
                             <p>
-                                Lorem ipsum dolor sit amet, consectetur elit, sed do eiusmod tempor ut labore et dolore
-                                magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                                aliquip ex ea commodo consequat.
+                                Environmental Pollution
+                                <br>
+                                Clogging of drainage systems
+                                <br>
+                                Chance of blockage of entire pipelines
                             </p>
                         </div>
                     </div>
@@ -136,26 +145,22 @@
                                 <img src="/img/about-plan.jpg" alt="" class="img-fluid">
                                 <div class="icon"><i class="ion-ios-list-outline"></i></div>
                             </div>
-                            <h2 class="title"><a href="#">Our Plan</a></h2>
+                            <h2 class="title"><a >Our Plan</a></h2>
                             <p>
-                                Sed ut perspiciatis unde omnis iste natus error sit voluptatem doloremque laudantium,
-                                totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto
-                                beatae vitae dicta sunt explicabo.
+                                Partnering with a large number of hotels, restaurants, etc. and the government facilities setup to get rid of the problems caused by UCO.
                             </p>
                         </div>
                     </div>
 
-                    <div class="col-md-4 wow fadeInUp" data-wow-delay="0.2s">
+                    <div class="col-md-4 wow fadeInUp text-center"  data-wow-delay="0.2s">
                         <div class="about-col">
                             <div class="img">
                                 <img src="/img/about-vision.jpg" alt="" class="img-fluid">
                                 <div class="icon"><i class="ion-ios-eye-outline"></i></div>
                             </div>
-                            <h2 class="title"><a href="#">Our Vision</a></h2>
-                            <p>
-                                Nemo enim ipsam voluptatem quia voluptas sit aut odit aut fugit, sed quia magni dolores
-                                eos qui ratione voluptatem sequi nesciunt Neque porro quisquam est, qui dolorem ipsum
-                                quia dolor sit amet.
+                            <h2 class="title"><a >Our Customers</a></h2>
+                            <p >
+                                Restaurants <br> Hotels  <br> Societies <br> Government Agencies
                             </p>
                         </div>
                     </div>
@@ -163,11 +168,8 @@
                 </div>
 
             </div>
-        </section><!-- #about -->
+        </section>
 
-        <!--==========================
-      Services Section
-    ============================-->
         <section id="services">
             <div class="container">
 
@@ -220,30 +222,22 @@
                 </div>
 
             </div>
-        </section><!-- #services -->
+        </section>
 
-        <!--==========================
-      Call To Action Section
-    ============================-->
         <section id="call-to-action" class="wow fadeIn">
             <div class="container text-center">
-                <h3>Call To Action</h3>
-                <p> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-                    pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
-                    anim id est laborum.</p>
-                <a class="cta-btn" href="#">Call To Action</a>
+                <h3>Be Our Patners..</h3>
+                <p> Take a step to a greener and sustainable future by just clicking on the button below.</p>
+                <a class="cta-btn" href="/rest/register">Register</a>
             </div>
-        </section><!-- #call-to-action -->
+        </section>
 
-        <!--==========================
-      Contact Section
-    ============================-->
         <section id="contact" class="section-bg wow fadeInUp">
             <div class="container">
 
                 <div class="section-header">
                     <h3>Contact Us</h3>
-                    <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque</p>
+                    <p>Send your queries if any, we'll contact you ASAP</p>
                 </div>
 
                 <div class="row contact-info">
@@ -252,7 +246,7 @@
                         <div class="contact-address">
                             <i class="ion-ios-location-outline"></i>
                             <h3>Address</h3>
-                            <address>A108 Adam Street, NY 535022, USA</address>
+                            <address>DCRUST,Murthal</address>
                         </div>
                     </div>
 
@@ -260,7 +254,7 @@
                         <div class="contact-phone">
                             <i class="ion-ios-telephone-outline"></i>
                             <h3>Phone Number</h3>
-                            <p><a href="tel:+155895548855">+1 5589 55488 55</a></p>
+                            <p><a href="tel:+918888888888">+918888888888</a></p>
                         </div>
                     </div>
 
@@ -268,7 +262,7 @@
                         <div class="contact-email">
                             <i class="ion-ios-email-outline"></i>
                             <h3>Email</h3>
-                            <p><a href="mailto:info@example.com">info@example.com</a></p>
+                            <p><a href="mailto:foo2fuel@hello.com">foo2fuel@hello.com</a></p>
                         </div>
                     </div>
 
@@ -305,77 +299,42 @@
                 </div>
 
             </div>
-        </section><!-- #contact -->
+        </section>
 
     </main>
 
-    <!--==========================
-    Footer
-  ============================-->
     <footer id="footer">
         <div class="footer-top">
             <div class="container">
                 <div class="row">
 
                     <div class="col-lg-3 col-md-6 footer-info">
-                        <h3>BizPage</h3>
-                        <p>Cras fermentum odio eu feugiat lide par naso tierra. Justo eget nada terra videa magna derita
-                            valies darta donna mare fermentum iaculis eu non diam phasellus. Scelerisque felis imperdiet
-                            proin fermentum leo. Amet volutpat consequat mauris nunc congue.</p>
+                        <h1 style=" display: inline;">
+                            <a style="color:white;" href="#intro" class="scrollto"
+                              >F<span
+                                ><img
+                                  height="35px;"
+                                  src="/img/logo.png"
+                                  alt="Hackathon"
+                                  title="Hackathon"/></span>
+                                  <span><img height="35px;"
+                                  src="/img/logo.png"
+                                  alt="Hackathon"
+                                  title="Hackathon"/></span>d2Fuel</a>
+                          </h1>
+                        
                     </div>
 
-                    <div class="col-lg-3 col-md-6 footer-links">
-                        <h4>Useful Links</h4>
-                        <ul>
-                            <li><i class="ion-ios-arrow-right"></i> <a href="#">Home</a></li>
-                            <li><i class="ion-ios-arrow-right"></i> <a href="#">About us</a></li>
-                            <li><i class="ion-ios-arrow-right"></i> <a href="#">Services</a></li>
-                            <li><i class="ion-ios-arrow-right"></i> <a href="#">Terms of service</a></li>
-                            <li><i class="ion-ios-arrow-right"></i> <a href="#">Privacy policy</a></li>
-                        </ul>
-                    </div>
-
-                    <div class="col-lg-3 col-md-6 footer-contact">
-                        <h4>Contact Us</h4>
-                        <p>
-                            A108 Adam Street <br>
-                            New York, NY 535022<br>
-                            United States <br>
-                            <strong>Phone:</strong> +1 5589 55488 55<br>
-                            <strong>Email:</strong> info@example.com<br>
-                        </p>
-
-                        <div class="social-links">
-                            <a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
-                            <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
-                            <a href="#" class="instagram"><i class="fa fa-instagram"></i></a>
-                            <a href="#" class="google-plus"><i class="fa fa-google-plus"></i></a>
-                            <a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a>
-                        </div>
-
-                    </div>
-
-                    <div class="col-lg-3 col-md-6 footer-newsletter">
-                        <h4>Our Newsletter</h4>
-                        <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna veniam enim veniam
-                            illum dolore legam minim quorum culpa amet magna export quem marada parida nodela caramase
-                            seza.</p>
-                        <form action="" method="post">
-                            <input type="email" name="email"><input type="submit" value="Subscribe">
-                        </form>
-                    </div>
+                   
+                        
 
                 </div>
             </div>
         </div>
-    </footer><!-- #footer -->
+    </footer>
 
     <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
-    <!-- Uncomment below i you want to use a preloader -->
-    <!-- <div id="preloader"></div> -->
-
-    <!-- JavaScript Libraries -->
-    <script src="/lib/jquery/jquery.min.js"></script>
+   <script src="/lib/jquery/jquery.min.js"></script>
     <script src="/lib/jquery/jquery-migrate.min.js"></script>
     <script src="/lib/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="/lib/easing/easing.min.js"></script>
