--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,13 +1,3 @@
-/*
-  Theme Name: BizPage
-  Theme URL: https://bootstrapmade.com/bizpage-bootstrap-business-template/
-  Author: BootstrapMade.com
-  License: https://bootstrapmade.com/license/
-*/
-
-/*--------------------------------------------------------------
-# General
---------------------------------------------------------------*/
 
 body {
   background: #fff;
@@ -712,7 +702,10 @@ body.mobile-nav-active #mobile-nav-toggle {
 #about .about-col:hover i {
   color: #18d26e;
 }
-
+#about .about-col:hover {
+  transform: scale(1.05) ;
+  transition: 0.5s;
+}
 #about .about-col h2 {
   color: #000;
   text-align: center;
