--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -4,17 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link href="/img/logo.png" rel="icon" />
-    <!-- <link href="img/apple-touch-icon.png" rel="apple-touch-icon"> -->
-    <!-- <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Montserrat:300,400,500,700" rel="stylesheet"> -->
-    <link href="/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
-    <!-- <link href="lib/font-awesome/css/font-awesome.min.css" rel="stylesheet"> -->
-    <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"> -->
-    <link href="/lib/animate/animate.min.css" rel="stylesheet" />
-    <link href="/lib/ionicons/css/ionicons.min.css" rel="stylesheet" />
-    <!-- <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet"> -->
-    <!-- <link href="lib/lightbox/css/lightbox.min.css" rel="stylesheet"> -->
-    <link href="/css/style.css" rel="stylesheet" />
+    <link href="/img/logo.png" rel="icon" /><link href="/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" /><link href="/lib/animate/animate.min.css" rel="stylesheet" />
+    <link href="/lib/ionicons/css/ionicons.min.css" rel="stylesheet" /><link href="/css/style.css" rel="stylesheet" />
+    <link rel="stylesheet" href="/css/signin.css">
     <link href="/css/dashboard.css" rel="stylesheet" />
     <script src="https://use.fontawesome.com/e2eea6562c.js"></script>
     <link href="/open-iconic/font/css/open-iconic.css" rel="stylesheet" />
@@ -24,10 +16,8 @@
     <header id="header" style="box-shadow: 0px 2px 6px #888;">
       <div class="container-fluid">
         <div id="logo" class="pull-left pb-5">
-          <!-- Uncomment below if you prefer to use an image logo -->
-          <!-- <a href="#intro"><img height="50px;" src="img/logo.png" alt="Hackathon" title="Hackathon"/></a>  -->
           <h1 style=" display: inline;">
-            <a style="color:white;" href="#intro" class="scrollto"
+            <a style="color:white;" href="/" class="scrollto"
               >F<span
                 ><img
                   height="35px;"
@@ -47,21 +37,20 @@
 
         <nav id="nav-menu-container">
           <ul class="nav-menu">
-            <li><a href="#intro">Home</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="/">Home</a></li>
           </ul>
         </nav>
       </div>
     </header>
-    <div class="orderSection">
+    <div class="orderSection  " style="background: rgb(255, 255, 255); width: 65%; margin: 120px auto; box-shadow: 0px 0px 4px #888; ">
         <% for(let o of orders){ %>
-        <div class="orderCard">
-            <h3><%= o.quantity %></h3>
-            <h3><%= o.user.address %></h2>
-            <h3><%= o.user.phone%></h3>
-            <h3><%= o.user.name %></h3>
-            <h3><%= o.user.date %></h3>
-            <a href="/order/<%= o.id %>">Click Me</a>
+        <div class="orderCard mx-2 py-2">
+            <h3><strong> Quantity:</strong> <%= o.quantity %></h3>
+            <h3><strong> Address:</strong><%= o.user.address %></h2>
+            <h3><strong>Phone Number: </strong></strong><%= o.user.phone%></h3>
+            <h3><strong>Restaurant Name: </strong></strong><%= o.user.name %></h3>
+            <h3><strong>Date: </strong><%= o.user.date.toString().substring(0,11) %></h3>
+            <button class="" style="border-radius: 0px; height: 40px; background: rgb(0, 250, 21); width: 130px; border: 0px solid black;"><a style="color: white;" href="/order/<%= o.id %>">Resolve</a></button>
         </div>
         <% } %>
     </div>
