--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -9,9 +9,43 @@
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     />
     <link rel="stylesheet" href="/css/signup.css" />
+    <link href="/img/logo.png" rel="icon" />
+    <link href="/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="/css/style.css" rel="stylesheet" />
+    <link href="/lib/animate/animate.min.css" rel="stylesheet" />
+    <link href="/lib/ionicons/css/ionicons.min.css" rel="stylesheet" />
     <title>Document</title>
   </head>
   <body>
+    <header id="header" style="box-shadow: 0px 2px 6px #888;">
+      <div class="container-fluid">
+        <div id="logo" class="pull-left pb-5">
+          <h1 style=" display: inline;">
+            <a style="color:white;" href="#intro" class="scrollto"
+              >F<span
+                ><img
+                  height="35px;"
+                  src="/img/logo.png"
+                  alt="Hackathon"
+                  title="Hackathon"/></span
+              ><span
+                ><img
+                  height="35px;"
+                  src="/img/logo.png"
+                  alt="Hackathon"
+                  title="Hackathon"/></span
+              >d2Fuel</a
+            >
+          </h1>
+        </div>
+
+        <nav id="nav-menu-container">
+          <ul class="nav-menu">
+            <li><a href="/">Home</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
     <div class="mainSection pt-5">
       <div class="leftSection">
         <div class="signBlk py-4">
@@ -48,6 +82,22 @@
         </div>
       </div>
     </div>
+    <script src="/lib/jquery/jquery.min.js"></script>
+    <script src="/lib/jquery/jquery-migrate.min.js"></script>
+    <script src="/lib/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="/lib/easing/easing.min.js"></script>
+    <script src="/lib/superfish/hoverIntent.js"></script>
+    <script src="/lib/superfish/superfish.min.js"></script>
+    <script src="/lib/wow/wow.min.js"></script>
+    <script src="/lib/waypoints/waypoints.min.js"></script>
+    <script src="/lib/counterup/counterup.min.js"></script>
+    <script src="/lib/owlcarousel/owl.carousel.min.js"></script>
+    <script src="/lib/isotope/isotope.pkgd.min.js"></script>
+    <script src="/lib/lightbox/js/lightbox.min.js"></script>
+    <script src="/lib/touchSwipe/jquery.touchSwipe.min.js"></script>
+
+    <!-- Template Main Javascript File -->
+    <script src="/js/main.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"></script>
   </body>
 </html>
