all commits in this brach

--- a/views/products.ejs
+++ b/views/products.ejs
@@ -49,8 +49,8 @@
   
             <div class="col-md-4 wow fadeInUp">
               <div class="about-col">
-                <div class="img">
-                  <img src="img/images.jpg" height="100%" width="100%" alt="" class="img-fluid">
+                <div class="img" style="width:100%; height:200px;">
+                  <img src="img/download (3).jpg" style="height:100%; width:100%;" alt="" class="img-fluid">
                 </div>
                 <h2 class="title"><a href="#">Household lubricant</a></h2>
                 <div class="card-redeem-container">
@@ -70,8 +70,8 @@
   
             <div class="col-md-4 wow fadeInUp" data-wow-delay="0.1s">
               <div class="about-col">
-                <div class="img">
-                  <img src="img/download.jpg" height="100%" width="100%" alt="" class="img-fluid">
+                <div class="img" style="width:100%; height:200px;">
+                  <img src="img/images.jpg" style="height:100%; width:100%;" alt="" class="img-fluid">
                 </div>
                 <h2 class="title"><a href="#">Key lock lubricant</a></h2>
                 <div class="card-redeem-container">
@@ -91,8 +91,8 @@
   
             <div class="col-md-4 wow fadeInUp" data-wow-delay="0.2s">
               <div class="about-col">
-                <div class="img">
-                  <img src="img/download (1).jpg" height="100%" width="100%" alt="" class="img-fluid">
+                <div class="img" style="width:100%; height:200px;">
+                  <img src="img/download.jpg" style="height:100%; width:100%;" alt="" class="img-fluid">
                 </div>
                 <h2 class="title"><a href="#">Lamp oil</a></h2>
                 <div class="card-redeem-container">
@@ -111,8 +111,8 @@
             </div>
             <div class="col-md-4 wow fadeInUp" data-wow-delay="0.2s">
                 <div class="about-col">
-                  <div class="img">
-                    <img src="img/images (1).jpg" alt="" class="img-fluid">
+                  <div class="img" style="width:100%; height:200px;">
+                    <img src="img/images (1).jpg" style="height:100%; width:100%;" alt="" class="img-fluid">
                   </div>
                   <h2 class="title"><a href="#">Furniture polish and conditioner</a></h2>
                   <div class="card-redeem-container">
@@ -131,8 +131,8 @@
               </div>
               <div class="col-md-4 wow fadeInUp" data-wow-delay="0.2s">
                 <div class="about-col">
-                  <div class="img">
-                    <img src="img/about-vision.jpg" alt="" class="img-fluid">
+                  <div class="img" style="width:100%; height:200px;">
+                    <img src="img/download (1).jpg" style="height:100%; width:100%;" alt="" class="img-fluid">
                   </div>
                   <h2 class="title"><a href="#">Leather preservative</a></h2>
                   <div class="card-redeem-container">
@@ -151,8 +151,8 @@
               </div>
               <div class="col-md-4 wow fadeInUp" data-wow-delay="0.2s">
                 <div class="about-col">
-                  <div class="img">
-                    <img src="img/about-vision.jpg" alt="" class="img-fluid">
+                  <div class="img" style="width:100%; height:200px;">
+                    <img src="img/images (2).jpg" style="height:100%; width:100%;" alt="" class="img-fluid">
                   </div>
                   <h2 class="title"><a href="#">Rattan and wicker furniture protector</a></h2>
                   <div class="card-redeem-container">
@@ -171,8 +171,8 @@
               </div>
               <div class="col-md-4 wow fadeInUp" data-wow-delay="0.2s">
                 <div class="about-col">
-                  <div class="img">
-                    <img src="img/about-vision.jpg" alt="" class="img-fluid">
+                  <div class="img" style="width:100%; height:200px;">
+                    <img src="img/images (3).jpg" style="height:100%; width:100%;" alt="" class="img-fluid">
                   </div>
                   <h2 class="title"><a href="#">Removing paint from your hands</a></h2>
                   <div class="card-redeem-container">
@@ -191,8 +191,8 @@
               </div>
               <div class="col-md-4 wow fadeInUp" data-wow-delay="0.2s">
                 <div class="about-col">
-                  <div class="img">
-                    <img src="img/about-vision.jpg" alt="" class="img-fluid">
+                  <div class="img" style="width:100%; height:200px;">
+                    <img src="img/download (2).jpg" style="height:100%; width:100%;" alt="" class="img-fluid">
                   </div>
                   <h2 class="title"><a href="#">Soap making</a></h2>
                   <div class="card-redeem-container">
@@ -211,8 +211,8 @@
               </div>
               <div class="col-md-4 wow fadeInUp" data-wow-delay="0.2s">
                 <div class="about-col">
-                  <div class="img">
-                    <img src="img/about-vision.jpg" alt="" class="img-fluid">
+                  <div class="img" style="width:100%; height:200px;">
+                    <img src="img/images (4).jpg" style="height:100%; width:100%;" alt="" class="img-fluid">
                   </div>
                   <h2 class="title"><a href="#">Hair moisturizer</a></h2>
                   <div class="card-redeem-container">
@@ -229,49 +229,6 @@
                   </div>
                 </div>
               </div>
-              <div class="col-md-4 wow fadeInUp" data-wow-delay="0.2s">
-                <div class="about-col">
-                  <div class="img">
-                    <img src="img/about-vision.jpg" alt="" class="img-fluid">
-                  </div>
-                  <h2 class="title"><a href="#">Pot and pan protector</a></h2>
-                  <div class="card-redeem-container">
-                      <div class="credits-each-product">
-                          <h2>
-                              1000pts
-                          </h2>
-                      </div>
-                      <div class="redeem-now-option">
-                          <h4>
-                              <a href="http://">Redeem Now!!</a>
-                          </h4>
-                      </div>
-                  </div>
-                </div>
-              </div>
-              <div class="col-md-4 wow fadeInUp" data-wow-delay="0.2s">
-                <div class="about-col">
-                  <div class="img">
-                    <img src="img/about-vision.jpg" alt="" class="img-fluid">
-                  </div>
-                  <h2 class="title"><a href="#">Pot and pan protector</a></h2>
-                  <div class="card-redeem-container">
-                      <div class="credits-each-product">
-                          <h2>
-                              1000pts
-                          </h2>
-                      </div>
-                      <div class="redeem-now-option">
-                          <h4>
-                              <a href="http://">Redeem Now!!</a>
-                          </h4>
-                      </div>
-                  </div>
-                </div>
-              </div>
-              
-
-  
           </div>
   
         </div>
