some things added

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -110,7 +110,7 @@
             <div class="text-center about-col pb-4">
               <div class="img">
                 <img src="" alt="" class="img-fluid" />
-                <div class="icon"><i class="ion-ios-eye-outline"></i></div>
+                <div class="icon"><i class="ion-ios-person"></i></div>
               </div>
               <h2 class="title"><a href="/unsubscribe">Unsubscribe</a></h2>
               Don't want to contribute to greener future anymore??
