--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -21,7 +21,7 @@
       <div class="container-fluid">
         <div id="logo" class="pull-left pb-5">
           <h1 style=" display: inline;">
-            <a style="color:white;" href="#intro" class="scrollto"
+            <a style="color:white;" href="/" class="scrollto"
               >F<span
                 ><img
                   height="35px;"
