--- a/views/index.ejs
+++ b/views/index.ejs
@@ -130,7 +130,7 @@
                     <div class="col-md-4 wow fadeInUp text-center">
                         <div class="about-col">
                             <div class="img">
-                                <img src="/img/about-mission.jpg" alt="" class="img-fluid">
+                                <img src="/img/oilphoto.jpg" alt="" class="img-fluid">
                                 <div class="icon"><i class="ion-ios-help"></i></div>
                             </div>
                             <h2 class="title"><a >Problems caused by UCO</a></h2>
@@ -160,8 +160,8 @@
                     <div class="col-md-4 wow fadeInUp text-center"  data-wow-delay="0.2s">
                         <div class="about-col">
                             <div class="img">
-                                <img src="/img/about-vision.jpg" alt="" class="img-fluid">
-                                <div class="icon"><i class="ion-ios-eye-outline"></i></div>
+                                <img src="/img/restau.jpg" style="max-height: 200px;" alt="" class="img-fluid">
+                                <div class="icon"><i class="ion-ios-person-outline"></i></div>
                             </div>
                             <h2 class="title"><a >Our Customers</a></h2>
                             <p >
@@ -210,7 +210,7 @@
         <% if(!locals.user){ %>
         <section id="call-to-action" class="wow fadeIn">
             <div class="container text-center">
-                <h3>Be Our Patners..</h3>
+                <h3>Be Our Partners..</h3>
                 <p> Take a step to a greener and sustainable future by just clicking on the button below.</p>
                 <a class="cta-btn" href="/rest/register">Register</a>
             </div>
