--- a/views/products.ejs
+++ b/views/products.ejs
@@ -194,7 +194,7 @@
                   <div class="img" style="width:100%; height:200px;">
                     <img src="img/download (2).jpg" style="height:100%; width:100%;" alt="" class="img-fluid">
                   </div>
-                  <h2 class="title"><a href="#">Soap making</a></h2>
+                  <h2 class="title"><a href="#">Soap</a></h2>
                   <div class="card-redeem-container">
                       <div class="credits-each-product">
                           <h2>
